--- a/src/css/home.css
+++ b/src/css/home.css
@@ -38,10 +38,6 @@ body {
     margin-right: 1rem;
 }
 
-.container-main {
-    width: 100vw;
-    height: 70vh;
-}
 
 .local {
     font-weight: 500;
@@ -58,6 +54,49 @@ body {
     font-size: 32px;
     font-weight: 700;
     margin: auto auto auto 1rem;
+}
+
+.container-main {
+    width: 100vw;
+    height: 66.8vh;
+    background-image: url(../img/bola-LogoCompasso\ 1.png);
+    background-repeat: no-repeat;
+}
+
+.container-main-txt {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-left: 2rem;
+    margin-right: 7vw;
+    margin-top: 2rem;
+}
+
+.main-txt-en {
+    color: #C13216;    
+    margin: .5rem 0;
+}
+
+.main-txt-en-h4 {  
+    font-size: 34px;
+    font-weight: bold;
+}
+
+.main-txt-en-h3 , .main-txt-en-h2, .main-txt-en-h1 {
+    font-size: 64px;
+    font-weight: bold;
+}
+
+.main-txt-en-h1 {
+    text-shadow: 
+    -1px -1px 1px #000, 
+    -1px 1px 1px #000,                    
+     1px -1px 1px #000,                  
+     1px 0px 1px #000
+}
+
+.main-txt-pt {
+    font-size: 1.2rem;   
 }
 
 footer {
@@ -86,7 +125,7 @@ footer div {
 .f-aviso {
     font-weight: 400;
     margin-right: 1rem;
-    font-size: 10px;
+    font-size: 11px;
     color: white;
     text-align: center;
 }
@@ -99,19 +138,24 @@ footer div {
 }
 
 .f-contador-txt {
-    font-size: 10px;
+    font-size: 11px;
     font-weight: 400;
     padding: 2rem 1rem 2rem 8rem;
 }
 
 .f-contador-timer {
-    font-size: 40px;
-    font-weight: 600;
+    font-size: 50px;
+    font-weight: 700;
     padding: 1rem 0 0;
+    text-shadow: 
+    -1px -1px 1px #000, 
+    -1px 1px 1px #000,                    
+     1px -1px 1px #000,                  
+     1px 0px 1px #000
 }
 
 .f-contador-segundos {
-    font-size: 7px;
+    font-size: 10px;
     font-weight: 300;
     text-align: center;
 }
